--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -47,7 +47,7 @@
   {% endif %}
   <a class="ym-button ym-next float-right" href="{% url 'webgcal:show_dashboard' %}" title="Go Back">Go Back</a>
   <h3>Websites of {{ calendar.name }}</h3>
-  {% include_live 'div' 'includes/website_table.html' websites=calendar.websites.all perms=perms %}
+  {% include_live 'dashboard-website-table' 'includes/website_table.html' websites=calendar.websites.all perms=perms %}
   {% if website_create_form %}
   <form action="{% url 'webgcal:create_website' calendar.id %}" method="post" class="ym-form ym-columnar">
     {% csrf_token %}
@@ -61,7 +61,7 @@
   {% endif %}
   {% endif %}
   {% endif %}
-  {% include_live 'div' 'includes/calendar_table.html' calendars=calendars perms=perms %}
+  {% include_live 'dashboard-calendar-table' 'includes/calendar_table.html' calendars=calendars perms=perms %}
   <div class="box info">The websites are currently parsed every hour and after all parsing is done the Google Calendar will be updated in small batches.</div>
   {% if calendar_create_form %}
   <form action="{% url 'webgcal:create_calendar' %}" method="post" class="ym-form ym-columnar">
