--- a/webgcal/apps/webgcal/templates/includes/calendar_row.html
+++ b/webgcal/apps/webgcal/templates/includes/calendar_row.html
@@ -1,5 +1,5 @@
 {% spaceless %}{% load jdatetime %}
-<tr{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %}>
+<tr class="{{ swampdragon_live }}"{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %}>
   <td>{{ calendar.name }}</td>
   <td>
     {% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}<br />
