--- a/webgcal/apps/webgcal/templates/includes/calendar_table.html
+++ b/webgcal/apps/webgcal/templates/includes/calendar_table.html
@@ -1,5 +1,5 @@
 {% spaceless %}{% load swampdragon_live %}
-<table class="bordertable">
+<table class="bordertable {{ swampdragon_live }}">
   <thead>
     <tr>
       <th scope="col">Name</th>
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   {% for calendar in calendars %}
-  {% include_live 'tbody' 'includes/calendar_row.html' calendar=calendar perms=perms %}
+  {% include_live 'calendar-table-row' 'includes/calendar_row.html' calendar=calendar perms=perms %}
   {% empty %}
   <tbody>
     <tr>
