--- a/webgcal/apps/webgcal/templates/includes/website_row.html
+++ b/webgcal/apps/webgcal/templates/includes/website_row.html
@@ -1,5 +1,5 @@
 {% spaceless %}{% load jdatetime %}
-<tr{% if not website.enabled %} style="background: #fff8f8;"{% endif %}>
+<tr class="{{ swampdragon_live }}"{% if not website.enabled %} style="background: #fff8f8;"{% endif %}>
   <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow">{{ website.name }}</a></td>
   <td>{{ website.events.count }}</td>
   <td>
