--- a/webgcal/apps/webgcal/templates/includes/website_row.html
+++ b/webgcal/apps/webgcal/templates/includes/website_row.html
@@ -16,4 +16,6 @@
     {% endif %}
     {% endif %}
   </td>
-</tr>{% endspaceless %}
+</tr>
+<style onload="if(window.jQuery){jQuery(this.parentNode).formatDatetime()};this.parentNode.removeChild(this);"></style>
+{% endspaceless %}
