Add context variable is_swampdragon_live to check for live rendering

--- a/webgcal/apps/webgcal/templates/includes/calendar_row.html
+++ b/webgcal/apps/webgcal/templates/includes/calendar_row.html
@@ -16,6 +16,8 @@
     {% endif %}
     {% endif %}
   </td>
+  {% if is_swampdragon_live %}
   <style onload="if(window.jQuery){jQuery(this.parentNode).formatDatetime()};this.parentNode.removeChild(this);"></style>
+  {% endif %}
 </tr>
 {% endspaceless %}
