Port from legacy SwampDragon to modern Channels application

--- a/webgcal/apps/webgcal/templates/includes/calendar_row.html
+++ b/webgcal/apps/webgcal/templates/includes/calendar_row.html
@@ -1,5 +1,5 @@
 {% spaceless %}{% load jdatetime %}
-<tr class="{{ swampdragon_live }}"{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %}>
+<tr class="{{ django_live_template }}"{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %}>
   <td>{{ calendar.name }}</td>
   <td>
     {% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}<br />
@@ -16,7 +16,7 @@
     {% endif %}
     {% endif %}
   </td>
-  {% if is_swampdragon_live %}
+  {% if is_django_live_template %}
   <style onload="if(window.jQuery){jQuery(this.parentNode).formatDatetime()};this.parentNode.removeChild(this);"></style>
   {% endif %}
 </tr>
