--- a/webgcal/apps/webgcal/templates/includes/website_row.html
+++ b/webgcal/apps/webgcal/templates/includes/website_row.html
@@ -1,5 +1,5 @@
 {% spaceless %}{% load jdatetime %}
-<tr class="{{ swampdragon_live }}"{% if not website.enabled %} style="background: #fff8f8;"{% endif %}>
+<tr class="{{ django_live_template }}"{% if not website.enabled %} style="background: #fff8f8;"{% endif %}>
   <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow">{{ website.name }}</a></td>
   <td>{{ website.events.count }}</td>
   <td>
@@ -16,7 +16,7 @@
     {% endif %}
     {% endif %}
   </td>
-  {% if is_swampdragon_live %}
+  {% if is_django_live_template %}
   <style onload="if(window.jQuery){jQuery(this.parentNode).formatDatetime()};this.parentNode.removeChild(this);"></style>
   {% endif %}
 </tr>
